fix index close button on iOS

--- a/src/style/scss/_indexPanel.scss
+++ b/src/style/scss/_indexPanel.scss
@@ -105,6 +105,7 @@
     position: absolute;
     right: 1em;
     top: 1em;
+    transform: translateZ(5px);
     width: 60px;
     z-index: 10;
 }
